--- a/index.html
+++ b/index.html
@@ -2,65 +2,126 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test HTML Site</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sabhya Aggarwal - Developer & Enthusiast</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google Fonts - Inter -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 2rem;
-            background: #f5f5f5;
-            color: #222;
+            font-family: 'Inter', sans-serif;
+            background-color: #f0f2f5; /* Light gray background */
         }
-        header {
-            background: #4a90e2;
-            color: #fff;
-            padding: 1rem;
-            border-radius: 8px;
+        /* Custom scrollbar for a cleaner look */
+        ::-webkit-scrollbar {
+            width: 8px;
         }
-        main {
-            margin-top: 2rem;
-            background: #fff;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.04);
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1;
+            border-radius: 10px;
         }
-        footer {
-            margin-top: 2rem;
-            color: #888;
-            text-align: center;
+        ::-webkit-scrollbar-thumb {
+            background: #888;
+            border-radius: 10px;
         }
-        button {
-            margin-top: 1rem;
-            background: #4a90e2;
-            color: #fff;
-            border: none;
-            padding: 0.5rem 1.5rem;
-            border-radius: 4px;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #357ab8;
+        ::-webkit-scrollbar-thumb:hover {
+            background: #555;
         }
     </style>
 </head>
-<body>
-    <header>
-        <h1>Welcome to the Test HTML Site</h1>
-    </header>
-    <main>
-        <h2>Sample Content</h2>
-        <p>This is a simple test website made with HTML, CSS, and a bit of JavaScript.</p>
-        <button onclick="showAlert()">Click Me!</button>
-        <div id="result" style="margin-top:1rem; font-weight:bold;"></div>
-    </main>
-    <footer>
-        &copy; 2025 Test HTML Site
-    </footer>
-    <script>
-        function showAlert() {
-            document.getElementById('result').textContent = "Button clicked! JavaScript is working.";
-        }
-    </script>
+<body class="flex flex-col items-center justify-center min-h-screen p-4 sm:p-6 bg-gradient-to-br from-blue-50 to-indigo-100">
+
+    <!-- Main Container -->
+    <div class="bg-white shadow-xl rounded-xl p-6 sm:p-8 md:p-10 w-full max-w-4xl transform transition-all duration-300 hover:scale-[1.01]">
+        <!-- Header Section -->
+        <header class="text-center mb-8">
+            <h1 class="text-3xl sm:text-4xl font-extrabold text-gray-800 mb-2">Sabhya Aggarwal</h1>
+            <p class="text-lg sm:text-xl text-indigo-600 font-medium">Student | Software & Hardware Enthusiast</p>
+            <a href="https://github.com/SabhyaAggarwal" target="_blank" rel="noopener noreferrer" class="inline-block mt-3 text-blue-600 hover:text-blue-800 text-sm sm:text-base font-semibold transition-colors duration-200">
+                <svg class="inline-block w-5 h-5 mr-1 align-middle" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017 2 16.293 4.866 19.75 8.839 20.818c.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.529 2.341 1.088 2.91.829.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.953 0-1.096.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.70.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.099 2.65.64.7 1.028 1.592 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" /></svg>
+                github.com/SabhyaAggarwal
+            </a>
+        </header>
+
+        <!-- About Me Section -->
+        <section class="mb-8 bg-blue-50 p-6 rounded-lg shadow-inner">
+            <h2 class="text-2xl sm:text-3xl font-bold text-gray-700 mb-4 border-b-2 border-blue-300 pb-2">About Me</h2>
+            <p class="text-gray-700 leading-relaxed text-base sm:text-lg mb-4">
+                I'm Sabhya Aggarwal, a student passionate about technology and innovation. Born in 2014, I'm currently 11 years old and my birthday is on June 18th! I thrive on blending software and hardware to craft impactful and creative solutions.
+            </p>
+
+            <h3 class="text-xl font-semibold text-gray-700 mb-3">Skills & Tools:</h3>
+            <div class="flex flex-wrap gap-2 mb-4">
+                <span class="bg-indigo-200 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full shadow-sm">Python</span>
+                <span class="bg-indigo-200 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full shadow-sm">C++</span>
+                <span class="bg-indigo-200 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full shadow-sm">Unity</span>
+                <span class="bg-indigo-200 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full shadow-sm">Linux (Arch btw)</span>
+                <span class="bg-indigo-200 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full shadow-sm">Microcontrollers</span>
+            </div>
+
+            <h3 class="text-xl font-semibold text-gray-700 mb-3">Hobbies:</h3>
+            <ul class="list-disc list-inside text-gray-700 leading-relaxed text-base sm:text-lg">
+                <li>Customizing my Arch Linux setup for optimal aesthetics and workflow.</li>
+                <li>Exploring intriguing open-source projects and diving into creative coding challenges.</li>
+            </ul>
+        </section>
+
+        <hr class="my-6 border-gray-300">
+
+        <!-- Featured Projects Section -->
+        <section class="mb-8">
+            <h2 class="text-2xl sm:text-3xl font-bold text-gray-700 mb-4 border-b-2 border-blue-300 pb-2">🚀 Featured Projects</h2>
+
+            <!-- Manim-AI-Code-Generator Project -->
+            <div class="bg-white border border-gray-200 rounded-lg shadow-md p-5 mb-6 transform transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+                <h3 class="text-xl font-semibold text-gray-800 mb-1">
+                    <a href="http://sabhya.me/Manim-AI-Code-Generator/manim_generator.html" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">
+                        Manim-AI-Code-Generator
+                    </a>
+                </h3>
+                <p class="text-gray-600 text-sm italic">Generate beautiful Manim animations directly from natural language using the power of AI.</p>
+            </div>
+
+            <!-- Stock Market Simulator Project -->
+            <div class="bg-white border border-gray-200 rounded-lg shadow-md p-5 transform transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+                <h3 class="text-xl font-semibold text-gray-800 mb-1">
+                    <a href="http://sabhya.me/Stock-Market-Simulator/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">
+                        Stock Market Simulator
+                    </a>
+                </h3>
+                <p class="text-gray-600 text-sm italic">A dynamic web-based simulator designed to help users explore and understand stock market dynamics and investment strategies.</p>
+            </div>
+        </section>
+
+        <hr class="my-6 border-gray-300">
+
+        <!-- GitHub Stats -->
+        <section class="mb-8">
+            <h2 class="text-2xl sm:text-3xl font-bold text-gray-700 mb-4 border-b-2 border-blue-300 pb-2">My GitHub Activity <span class="text-sm font-normal text-gray-500">(active since May 2025)</span></h2>
+            <div class="flex flex-col md:flex-row justify-center items-center gap-6 mb-4">
+                <img src="https://github-readme-stats.vercel.app/api?username=SabhyaAggarwal&theme=vue-dark&show_icons=true&hide_border=true&count_private=true" alt="SabhyaAggarwal's Stats" class="w-full md:w-1/2 h-auto rounded-lg shadow-md object-contain">
+                <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=SabhyaAggarwal&theme=vue-dark&show_icons=true&hide_border=true&layout=compact" alt="SabhyaAggarwal's Top Languages" class="w-full md:w-1/2 h-auto rounded-lg shadow-md object-contain">
+            </div>
+            <p class="text-gray-700 leading-relaxed text-base sm:text-lg italic mt-6 text-center">
+                I'm always eager to collaborate and build amazing things together! Feel free to explore my work.
+            </p>
+        </section>
+
+        <!-- View All Repositories Link -->
+        <section class="text-center mt-8">
+            <p class="text-center text-gray-600 text-sm">
+                <a href="https://github.com/SabhyaAggarwal?tab=repositories" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-200 text-base sm:text-lg">
+                    View all my repositories on GitHub &rarr;
+                </a>
+            </p>
+        </section>
+
+        <!-- Footer -->
+        <footer class="text-center mt-8 text-gray-500 text-sm">
+            <p>&copy; 2025 Sabhya Aggarwal. All rights reserved.</p>
+        </footer>
+    </div>
+
 </body>
 </html>
