--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         VAC with Camera
                     </a>
                 </h3>
-                <p class="text-gray-600 text-sm italic">An innovative project combining vacuum cleaning automation with camera-based navigation and control systems.</p>
+                <p class="text-gray-600 text-sm italic">A project which connects a virtual cable between your input microphone and your output speakers with an addition camera functionality.</p>
             </div>
 
             <!-- Food to Recipe Convertor Project -->
