--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <header class="text-center mb-8">
             <h1 class="text-3xl sm:text-4xl font-extrabold text-gray-800 mb-2">Sabhya Aggarwal</h1>
             <p class="text-lg sm:text-xl text-indigo-600 font-medium">Student | Software & Hardware Enthusiast</p>
-            <a href="https://github.com/SabhyaAggarwal" target="_blank" rel="noopener noreferrer" class="inline-block mt-3 text-blue-600 hover:text-blue-800 text-sm sm:text-base font-semibold transition-colors duration-200">
-                <svg class="inline-block w-5 h-5 mr-1 align-middle" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017 2 16.293 4.866 19.75 8.839 20.818c.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.529 2.341 1.088 2.91.829.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.953 0-1.096.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.70.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.099 2.65.64.7 1.028 1.592 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" /></svg>
+            <a href="https://github.com/SabhyaAggarwal" target="_blank" rel="noopener noreferrer" class="inline-block mt-3 text-blue-600 hover:text-blue-800 text-sm sm:text-base font-semibold transition-colors">
+                <svg class="inline-block w-5 h-5 mr-1 align-middle" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017 2 16.293 ..."></path></svg>
                 github.com/SabhyaAggarwal
             </a>
         </header>
@@ -48,9 +48,14 @@
         <section class="mb-8 bg-blue-50 p-6 rounded-lg shadow-inner">
             <h2 class="text-2xl sm:text-3xl font-bold text-gray-700 mb-4 border-b-2 border-blue-300 pb-2">About Me</h2>
             <p class="text-gray-700 leading-relaxed text-base sm:text-lg mb-4">
-                I'm Sabhya Aggarwal, a student passionate about technology and innovation. Born in 2014, I'm currently 11 years old and my birthday is on June 18th! I thrive on blending software and hardware to craft impactful and creative solutions.
+                I'm Sabhya Aggarwal, a student passionate about technology and innovation. Born in 2014, I'm currently 11 years old and my birthday is on June 18th! I thrive on blending software and hardware to create impactful solutions.
             </p>
-
+            <p class="text-gray-700 leading-relaxed text-base sm:text-lg mb-4">
+                Jaksh* is my friend.
+            </p>
+            <p style="font-size: xx-small;">
+                You’re welcome Jaksh I didn’t write what you thought I was going to write here.
+            </p>
             <h3 class="text-xl font-semibold text-gray-700 mb-3">Skills & Tools:</h3>
             <div class="flex flex-wrap gap-2 mb-4">
                 <span class="bg-indigo-200 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full shadow-sm">Python</span>
@@ -59,7 +64,6 @@
                 <span class="bg-indigo-200 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full shadow-sm">Linux (Arch btw)</span>
                 <span class="bg-indigo-200 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full shadow-sm">Microcontrollers</span>
             </div>
-
             <h3 class="text-xl font-semibold text-gray-700 mb-3">Hobbies:</h3>
             <ul class="list-disc list-inside text-gray-700 leading-relaxed text-base sm:text-lg">
                 <li>Customizing my Arch Linux setup for optimal aesthetics and workflow.</li>
@@ -73,7 +77,6 @@
         <section class="mb-8">
             <h2 class="text-2xl sm:text-3xl font-bold text-gray-700 mb-4 border-b-2 border-blue-300 pb-2">🚀 Featured Projects</h2>
 
-            <!-- Manim-AI-Code-Generator Project -->
             <div class="bg-white border border-gray-200 rounded-lg shadow-md p-5 mb-6 transform transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                 <h3 class="text-xl font-semibold text-gray-800 mb-1">
                     <a href="http://sabhya.me/Manim-AI-Code-Generator/manim_generator.html" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">
@@ -83,7 +86,6 @@
                 <p class="text-gray-600 text-sm italic">Generate beautiful Manim animations directly from natural language using the power of AI.</p>
             </div>
 
-            <!-- Stock Market Simulator Project -->
             <div class="bg-white border border-gray-200 rounded-lg shadow-md p-5 mb-6 transform transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                 <h3 class="text-xl font-semibold text-gray-800 mb-1">
                     <a href="http://sabhya.me/Stock-Market-Simulator/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">
@@ -92,49 +94,17 @@
                 </h3>
                 <p class="text-gray-600 text-sm italic">A dynamic web-based simulator designed to help users explore and understand stock market dynamics and investment strategies.</p>
             </div>
-
-            <!-- VAC with Camera Project -->
-            <div class="bg-white border border-gray-200 rounded-lg shadow-md p-5 mb-6 transform transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
-                <h3 class="text-xl font-semibold text-gray-800 mb-1">
-                    <a href="https://sabhya.me/VAC-with-Camera/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">
-                        VAC with Camera
-                    </a>
-                </h3>
-                <p class="text-gray-600 text-sm italic">A project which connects a virtual cable between your input microphone and your output speakers with an addition camera functionality.</p>
-            </div>
-
-            <!-- Food to Recipe Convertor Project -->
-            <div class="bg-white border border-gray-200 rounded-lg shadow-md p-5 transform transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
-                <h3 class="text-xl font-semibold text-gray-800 mb-1">
-                    <a href="https://sabhya.me/Food-to-Recipe-Convertor/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">
-                        Food to Recipe Convertor
-                    </a>
-                </h3>
-                <p class="text-gray-600 text-sm italic">A smart application that converts food images into detailed recipes with ingredients and cooking instructions.</p>
-            </div>
         </section>
 
         <hr class="my-6 border-gray-300">
 
         <!-- GitHub Stats -->
         <section class="mb-8">
-            <h2 class="text-2xl sm:text-3xl font-bold text-gray-700 mb-4 border-b-2 border-blue-300 pb-2">My GitHub Activity <span class="text-sm font-normal text-gray-500">(active since May 2025)</span></h2>
+            <h2 class="text-2xl sm:text-3xl font-bold text-gray-700 mb-4 border-b-2 border-blue-300 pb-2">My GitHub Activity</h2>
             <div class="flex flex-col md:flex-row justify-center items-center gap-6 mb-4">
-                <img src="https://github-readme-stats.vercel.app/api?username=SabhyaAggarwal&theme=vue-dark&show_icons=true&hide_border=true&count_private=true" alt="SabhyaAggarwal's Stats" class="w-full md:w-1/2 h-auto rounded-lg shadow-md object-contain">
-                <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=SabhyaAggarwal&theme=vue-dark&show_icons=true&hide_border=true&layout=compact" alt="SabhyaAggarwal's Top Languages" class="w-full md:w-1/2 h-auto rounded-lg shadow-md object-contain">
+                <img src="https://github-readme-stats.vercel.app/api?username=SabhyaAggarwal&theme=vue-dark&show_icons=true&hide_border=true&count_private=true" alt="SabhyaAggarwal's Stats">
+                <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=SabhyaAggarwal&theme=vue-dark&show_icons=true&hide_border=true&layout=compact" alt="SabhyaAggarwal's Top Languages">
             </div>
-            <p class="text-gray-700 leading-relaxed text-base sm:text-lg italic mt-6 text-center">
-                I'm always eager to collaborate and build amazing things together! Feel free to explore my work.
-            </p>
-        </section>
-
-        <!-- View All Repositories Link -->
-        <section class="text-center mt-8">
-            <p class="text-center text-gray-600 text-sm">
-                <a href="https://github.com/SabhyaAggarwal?tab=repositories" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-200 text-base sm:text-lg">
-                    View all my repositories on GitHub &rarr;
-                </a>
-            </p>
         </section>
 
         <!-- Footer -->
