--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Jaksh* is my friend.
             </p>
             <p style="font-size: xx-small;">
-                You’re welcome Jaksh I didn’t write what you thought I was going to write here.
+                *You’re welcome Jaksh I didn’t write what you thought I was going to write here.
             </p>
             <h3 class="text-xl font-semibold text-gray-700 mb-3">Skills & Tools:</h3>
             <div class="flex flex-wrap gap-2 mb-4">
