--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="mb-8 bg-blue-50 p-6 rounded-lg shadow-inner">
             <h2 class="text-2xl sm:text-3xl font-bold text-gray-700 mb-4 border-b-2 border-blue-300 pb-2">About Me</h2>
             <p class="text-gray-700 leading-relaxed text-base sm:text-lg mb-4">
-                I'm Sabhya Aggarwal, a student passionate about technology and innovation. Born in 2014, I'm currently 11 years old and my birthday is on June 18th! I thrive on blending software and hardware to craft impactful and creative solutions.
+                I am Sabhya Aggarwal, a student passionate about technology and innovation. Born in 2014, I'm currently 11 years old and my birthday is on June 18th! I thrive on blending software and hardware to craft impactful and creative solutions.
             </p>
 
             <h3 class="text-xl font-semibold text-gray-700 mb-3">Skills & Tools:</h3>
