--- a/frontend/index.html
+++ b/frontend/index.html
@@ -119,7 +119,7 @@
 
     <script>
         // Configuration
-        const NETLIFY_FUNCTION_URL = 'https://deploy-preview-3--website-sabhyame.netlify.app/.netlify/functions/gemini-proxy';
+        const NETLIFY_FUNCTION_URL = 'https://website-sabhyame.netlify.app/.netlify/functions/gemini-proxy';
 
         // DOM elements
         const form = document.getElementById('geminiForm');
