--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
+    <meta name="google-adsense-account" content="ca-pub-7942265270167975">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://sabhya.me/">
