--- a/index.html
+++ b/index.html
@@ -275,6 +275,12 @@
             <p>&copy; 2025 Sabhya Aggarwal. All rights reserved.</p>
         </footer>
     </div>
+    <script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'xbeyxvxgbs',
+    });
+    </script>
+
 
 </body>
 </html>
