--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <meta name="google-adsense-account" content="ca-pub-7942265270167975">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7942265270167975"
      crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1VV0PFHCHR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-1VV0PFHCHR');
+    </script>
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://sabhya.me/">
