--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <!-- Manim-AI-Code-Generator Project -->
             <div class="bg-white border border-gray-200 rounded-lg shadow-md p-5 mb-6 transform transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                 <h3 class="text-xl font-semibold text-gray-800 mb-1">
-                    <a href="http://sabhya.me/Manim-AI-Code-Generator/manim_generator.html" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">
+                    <a href="http://sabhya.me/Manim-AI-Code-Generator" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">
                         Manim-AI-Code-Generator
                     </a>
                 </h3>
